# lvd-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
lvd_lib/: Cargo.toml  README.md
lvd_lib/src/: array.rs  id.rs  lib.rs  lvd.rs  objects.rs  shape.rs  string.rs  tag.rs  util.rs  vector.rs  version.rs
lvd_lib/src/objects/: base.rs  collision.rs  damage_shape.rs  enemy_generator.rs  field_smash.rs  general_shape.rs  item_popup.rs  item_popup_region.rs  point.rs  ptrainer.rs  region.rs
lvd_lib/src/objects/collision/: attribute.rs  cliff.rs  flags.rs  line_group.rs  spirits_floor.rs
lvd_lib/src/string/: tests.rs
lvd_lib/src/tag/: tests.rs
src/: lib.rs  line_flags.rs  main.rs  writer.rs
yamlvd/: Cargo.toml  README.md
yamlvd/src/: cli.rs  main.rs
