[package]
name = "smash-lvd"
version = "0.1.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "lvd"
path = "src/lib.rs"

[[bin]]
name = "yamlvd"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
binrw = { git = "https://github.com/jam1garner/binrw", rev = "e8ae07ec" }
binwrite = "0.2.1"

# serde support
serde = { version = "1", features = ["derive"], optional = true }

# cli
clap = { version = "3.0.0-beta", optional = true }
serde_yaml = { version = "0.8", optional = true }

[features]
serde_support = ["serde"]
cli = ["serde_support", "clap", "serde_yaml"]
