[package]
name = "smash-lvd"
version = "0.2.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "lvd"
path = "src/lib.rs"

[[bin]]
name = "yamlvd"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
modular-bitfield = "0.11"
binrw = "0.9.2"

# serde support
serde = { version = "1", features = ["derive"], optional = true }

# cli
clap = { version = "3.2.17", features = ["derive"], optional = true }
serde_yaml = { version = "0.8", optional = true }

[features]
serde_support = ["serde"]
cli = ["serde_support", "clap", "serde_yaml"]
