[package]
name = "smash-lvd"
version = "0.3.0"
authors = ["jam1garner <jam@jam1.re>"]
edition = "2018"
description = "A Rust crate for working with Smash level data (`.lvd`) files from 3DS / Wii U and Ultimate."
license = "MIT"
documentation = "https://docs.rs/smash-lvd"
readme = "./README.md"
repository = "https://github.com/jam1garner/lvd-rs"

[lib]
name = "lvd"
path = "src/lib.rs"

[[bin]]
name = "yamlvd"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
modular-bitfield = "0.11"
binrw = "0.9.2"

# serde support
serde = { version = "1", features = ["derive"], optional = true }

# cli
clap = { version = "3.2.17", features = ["derive"], optional = true }
serde_yaml = { version = "0.8", optional = true }

[features]
serde_support = ["serde"]
cli = ["serde_support", "clap", "serde_yaml"]
