[package]
name = "lvd_lib"
version = "0.5.0"
authors = ["ThatNintendoNerd", "jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2024"
description = "Reading and writing LVD files"
documentation = "https://docs.rs/smash-lvd"
repository = "https://github.com/ultimate-research/lvd-rs"
license = "MIT"

[dependencies]
bilge = "0.2.0"
binrw = "0.15.0"
serde = { version = "1.0.219", features = ["derive"], optional = true }
thiserror = "2.0.12"

[features]
serde = ["dep:serde"]
